# Salamandre

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  idees_projet.md
daemon/: CMakeLists.txt  README.md
daemon/examples/gui/: CMakeLists.txt  client.cpp  functions.cpp  functions.hpp
daemon/include/Salamandre-daemon/: Daemon.hpp  FileInfo.hpp  FileManager.hpp  GuiFunctions.hpp  GuiFunctions.tpl  ServerBroadcast.hpp  ServerFunctions.hpp  define.hpp.in  std.hpp  std.tpl
daemon/src/Salamandre-daemon/: CMakeLists.txt  Daemon.cpp  FileInfo.cpp  FileManager.cpp  GuiFunctions.cpp  ServerBroadcast.cpp  ServerFunctions.cpp  main.cpp  std.cpp
deamon/: CMakeLists.txt
deamon/src/Salamandre-daemon/: CMakeLists.txt
doc/: Doxyfile.in
gui/: Salamandre.pro
gui/Simulator/: Simulator.pro  main.cpp
gui/Simulator/forms/: forms.pri  mainwindow.ui
gui/Viewer/: Viewer.pro  Viewer.qrc  main.cpp
gui/Viewer/forms/: choosedialog.cpp  choosedialog.hpp  choosedialog.ui  connectiondeconnectiondialog.cpp  connectiondeconnectiondialog.hpp  connectiondeconnectiondialog.ui  connexiondialog.cpp  connexiondialog.hpp  connexiondialog.ui  daemonconnectiondialog.cpp  daemonconnectiondialog.hpp  daemonconnectiondialog.ui  forms.pri  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  patientnamedialog.cpp  patientnamedialog.hpp  patientnamedialog.ui  savedialog.cpp  savedialog.hpp  savedialog.ui  updatefiledialog.cpp  updatefiledialog.hpp  updatefiledialog.ui
gui/Viewer/objects/: ConfidentialRecord.cpp  ConfidentialRecord.hpp  DigitalRecord.cpp  DigitalRecord.hpp  Fiche.cpp  FicheConfidentielle.cpp  FicheConfidentielle.hpp  FicheDonneesMedicales.cpp  FicheDonneesMedicales.hpp  FicheDonneesNumeriques.cpp  FicheDonneesNumeriques.hpp  FicheEtatCivil.cpp  FicheEtatCivil.hpp  MedicalRecord.cpp  MedicalRecord.hpp  Record.cpp  Record.hpp  RegistryRecord.cpp  RegistryRecord.hpp  doctor.cpp  doctor.hpp  gzstream.cpp  listview.cpp  listview.hpp  objects.pri  patient.cpp  patient.hpp  settings.cpp  settings.hpp  sockreceiver.cpp  sockreceiver.hpp  socksender.cpp  socksender.hpp  systemtray.cpp  systemtray.hpp  threadexport.cpp  threadexport.hpp  threadgestionapps.cpp  threadgestionapps.hpp  threadsave.cpp  (+3 more)
gui/Viewer/record/: ConfidentialRecord.cpp  ConfidentialRecord.hpp  DigitalRecord.cpp  DigitalRecord.hpp  MedicalRecord.cpp  MedicalRecord.hpp  Record.cpp  Record.hpp  RegistryRecord.cpp  RegistryRecord.hpp  gzstream.cpp  record.pri
gui/fiche/: Fiche.cpp  FicheDonneesMedicales.cpp  FicheDonneesNumeriques.hpp  FicheEtatCivil.cpp
include/Salamandre/fiche/: Fiche.hpp  FicheConfidentielle.hpp  FicheDonneesMedicales.hpp  FicheDonneesNumeriques.hpp  FicheEtatCivil.hpp
include/Salamandre/viewer/gui/: mainwindow.hpp
include/Salamandre/viewer/shared/: graphicsitemcomputer.hpp  graphicsscene.hpp
src/SalamandViewer/: SalamandViewer.pro  SalamandViewer.pro.user.d412182  Salamander.qrc  main.cpp
src/SalamandViewer/gui/: gui.pri  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/SalamandViewer/gui/icons/: Thumbs.db
src/SalamandViewer/gui/icons/graphics/: Thumbs.db
src/SalamandViewer/shared/: graphicsitemcomputer.cpp  graphicsitemcomputer.hpp  graphicsitemlink.hpp  graphicsscene.cpp  graphicsscene.hpp  shared.pri
src/Salamandre/: CMakeLists.txt
src/Salamandre/crypt/: CMakeLists.txt
src/Salamandre/fiche/: CMakeLists.txt  Fiche.cpp  FicheConfidentielle.cpp  FicheDonneesMedicales.cpp  FicheDonneesNumeriques.cpp  FicheEtatCivil.cpp
src/Salamandre/viewer/: CMakeLists.txt
src/Salamandre/viewer/gui/: CMakeLists.txt  mainwindow.cpp
src/Salamandre/viewer/networkConfig/: networkConfiguration.txt
src/Salamandre/viewer/shared/: CMakeLists.txt  graphicsitemcomputer.cpp  graphicsitemlink.cpp  graphicsscene.cpp
stats/: CMakeLists.txt  Note.txt
stats/examples/: CMakeLists.txt  test  test.cpp
stats/examples/datas/: test.db
stats/include/Salamandre-stats/: broadcast.hpp  discover.hpp  node.hpp  node.tpl  stats.hpp
stats/src/: Salamandre-stats.files
stats/src/Salamandre-stats/: CMakeLists.txt  broadcast.cpp  discover.cpp  node.cpp  stats.cpp  test.cpp
tests/: CMakeLists.txt
